src/test/ui/privacy/private-type-in-interface.stderr
error[E0118]: no base type found for inherent implementation
  --> $DIR/private-type-in-interface.rs:21:6
   |
LL | impl m::Alias {}
   |      ^^^^^^^^ impl requires a base type
   |
   = note: either implement a trait on it or create a newtype to wrap it instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0118`.
